@@ -1,5 +1,9 @@
 2001-05-29  Dave Peticolas  <dave@krondo.com>
 
+	* configure.in: call new macro below
+
+	* acinclude.m4: add macro to check for tm_gmtoff struct tm member
+
 	* src/engine/date.c: handle all uses of nl_langinfo.
 
 2001-05-30  Robert Graham Merkel  <rgmerk@mira.net>
